--- a/index.html
+++ b/index.html
@@ -1,1 +1,192 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css.css" type="text/css">
+
+<title>My3ds</title>
+
+</head>
+<body>
+    <div id="container">
+        <div class="gallery">
+            <div class="gallery-image">
+                <a href="#" alt="a"><img src="img/N3DS_YO-KAI_WATCH_logo1-200x120.jpg"></a>
+                <h6><span class="note">80/100</span> <a href="#">ELANCZEWSKI</a></h6>
+                <p><a href="#">[Recenzja] Yo-kai Watch</a></p>
+            </div>
+            <div class="gallery-image">
+                <a href="#" alt="a"><img src="img/star_fox_zero_artwork-200x120.jpg"></a>
+                <h6><span class="note">80/100</span> <a href="#">HALLKYON</a></h6>
+                <p><a href="#">[Recenzja] Pokken Tournament</a></p>
+            </div>
+            <div class="gallery-image">
+                <a href="#" alt="a"><img src="img/shantaerisky-200x120.jpg"></a>
+                <h6><span class="note">80/100</span> <a href="#">ELANCZEWSKI</a></h6>
+                <p><a href="#">[Recenzja] Shantae: Risky’s Revenge – Director’s Cut</a></p>
+            </div>
+            <div class="gallery-image">
+                <a href="#" alt="a"><img src="img/2926246-pokken_logo-200x120.jpg"></a>
+                <h6><span class="note">80/100</span> <a href="#">ELANCZEWSKI</a></h6>
+                <p><a href="#">[Recenzja] Star Fox Zero</a></p>
+            </div>
+            <div class="gallery-image">
+                <a href="#" alt="a"><img src="img/maxresdefault-2-200x120.jpg"></a>
+                <h6><span class="note">80/100</span> <a href="#">ELANCZEWSKI</a></h6>
+                <p><a href="#">[Recenzja] New Super Mario Bros. U</a></p>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <div id="wrapper">
+            <header>
+                <div id="logo">
+                    <img src="img/my3dslogo.jpg" alt="my3ds"/>
+                    <form action="#" method="get">
+                        <input type="text" placeholder="Zelda, Mario, Nintendo..."></input>
+                        <button type="submit" value="ok">Szukaj</button>
+                    </form>
+                </div>
+                <div class="clearfix"></div>
+                <nav>
+                    <ol class="clearfix-list">
+                        <li><a href="#">START</a>
+                            <ul>
+                                <li><a href="#">REDAKCJA</a></li>
+                                <li><a href="#">KONTAKT</a></li>
+                                <li><a href="#">PRZYJACIELE MY3DS</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">3DS</a></li>
+                        <li><a href="#">WIIU</a></li>
+                        <li><a href="#">NX</a></li>
+                        <li><a href="#">KATALOG GIER</a>
+                            <ul>
+                                <li><a href="#">TOP 50 GIER WG OCEN</a></li>
+                                <li><a href="#">TOP 50 GIER WG KOLEKCJI</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">PUBLICYSTYKA</a></li>
+                        <li><a href="#">RECENZJE</a>
+                            <ul>
+                                <li><a href="#">3DS</a></li>
+                                <li><a href="#">WIIU</a></li>
+                                <li><a href="#">RETRO</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">SPOTKANIA</a></li>
+                        <li><a href="#">FORUM</a></li>
+                    </ol>
+                </nav>
+                <div class="clearfix"></div>
+            </header>
+        <div id="content">
+            <div id="left">
+                <div class="image">
+                    <a href="#"><img src="img/zelda-nx-top-big-702x383.jpg"/></a>
+                    <h1><a href="#">The Legend of Zelda: Breath of the Wild. <hr>Wszystkie materiały z E3.</a></h1>
+                    <p>Przegapiliście pokaz The Legend of Zelda: Breath of the Wild podczas dzisiejszego Nintendo Treehouse Live? A może chcecie przyjrzeć się nowemu dziełu […]</p>
+                </div>
+                <aside>
+                    <span>
+                        <a href="#">NAJNOWSZE GRY NINTENDO W EUROPIE</a>
+                        |
+                        <a href="#"><b>RANKING TOP 50</b></a>
+                    </span>
+                </aside>
+                <section>
+                    <a href="#">
+                       <div class="images-list">
+                        <img src="img/l1.jpg"/>
+                        <p>Mario Party </p>
+                        </div>
+                    </a>
+                    
+                    <a href="#">
+                       <div class="images-list">
+                        <img src="img/l2.jpg"/>
+                        <p>Pokemon Sun</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                       <div class="images-list">
+                        <img src="img/l3.jpg"/>
+                        <p>Pokemon Moon</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                       <div class="images-list">
+                        <img src="img/l4.jpg"/>
+                        <p>Corpse Party</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                       <div class="images-list">
+                        <img src="img/l5.jpg"/>
+                        <p>Fire Emblem: Fates</p>
+                        </div>
+                    </a>
+                </section>
+                <div class="clearfix"></div>
+            
+                <h4>3 LIPCA</h4>
+                <section>
+                    <div class="news">
+                        <a href="#"><img src="img/n1.jpg"/></a>
+                            <div class="news-content">
+                                <a href="#"><h5 class="autor">ELANCZEWSKI</h5></a>
+                                <a href="#"><h3>Nowy trailer Ace Attorney − Spirit of Justice koncentruje się na żeńskich postaciach z gry</h3></a>
+                                <p>Z okazji trwającego właśnie Anime Expo 2016, Capcom zaprezentował nowy trailer z gry Phoenix Wright: Ace Attorney − Spirit of Justice. Tematem […]</p>
+                            </div>
+                    </div>
+                    <div class="news">
+                        <a href="#"><img src="img/n2.jpg"/></a>
+                            <div class="news-content">
+                                <a href="#"><h5 class="autor">ELANCZEWSKI</h5></a>
+                                <a href="#"><h3>Ciekawa analiza soundtracku Mario Kart 8</h3></a>
+                                <p>Jak powszechnie wiadomo, Mario Kart 8 posiada najlepszą i najbardziej zróżnicowaną ścieżkę dźwiękową spośród wszystkich gier na Wii U. Youtuber Bulby postanowił […]]</p>
+                            </div>
+                    </div>
+                    <div class="news">
+                        <a href="#"><img src="img/n3.jpg"/></a>
+                            <div class="news-content">
+                                <a href="#"><h5 class="autor">ELANCZEWSKI</h5></a>
+                                <a href="#"><h3>[Wyciek] Bohaterowie ostatnich DLC do Hyrule Warriors Legends ujawnieni?</h3></a>
+                                <p>Wygląda na to, że imiona trzech ostatnich wojowników, którzy zasilą szeregi grywalnych postaci w Hyrule Warriors Legends właśnie wyciekły do sieci. Uwaga, czytacie na własną odpowiedzialność! […]</p>
+                            </div>
+                    </div>
+                    <div class="news">
+                        <a href="#"><img src="img/n4.png"/></a>
+                            <div class="news-content">
+                                <a href="#"><h5 class="autor">ELANCZEWSKI</h5></a>
+                                <a href="#"><h3>Livestream Pokemon na Raz!</h3></a>
+                                <p>Już po raz czwarty ekipa AntyGaming organizuje wielogodzinny livestream, podczas którego rozdajemy atrakcyjne nagrody, a w tle majaczą Pokemony! Tym razem zmierzymy […]</p>
+                            </div>
+                    </div>
+                    <div class="news">
+                        <a href="#"><img src="img/n5.jpg"/></a>
+                            <div class="news-content">
+                                <a href="#"><h5 class="autor">ELANCZEWSKI</h5></a>
+                                <a href="#"><h3>[Recenzja] Bravely Second: End Layer</h3></a>
+                                <p>„Oh, hello. I see fire in those eyes! How do I put it? They’ve a strong sense of duty. Like whatever you […]</p>
+                            </div>
+                    </div>
+                </section>
+            </div>
+            <div id="right">
+                 <aside>
+                     <a href="#"><img src="img/a1.jpg"></a>
+                     <a href="#"><img src="img/a2.jpg"></a>
+                     <a href="#"><img src="img/a3.jpg"></a>
+                     <a href="#"><img src="img/a4.jpg"></a>
+                     <a href="#"><img src="img/a5.jpg"></a>
+                 </aside>
+            </div>
+            <div class="clearfix"></div>
+    </div>
+</body>
+</html>
